# jpeg-archive

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  appveyor.yml  jpeg-archive-inplace.go  jpeg-recompress.go
src/: CMakeLists.txt  recompress.c  util.c
